[package]
name = "nostcat"
description = "Websocket client for nostr relay scripting"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/blakejakopovic/nostcat"
license-file = "LICENSE.txt"
readme = "README.md"
keywords = ["nostr", "websocket", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = {version = "0.16.0", features = ["native-tls"]}
url = "2.2.2"
log = "0.4.0"
env_logger = "0.9.0"
clap = "4.0.26"
