[package]
name = "nostcat"
description = "Websocket client for nostr relay scripting"
version = "0.3.3"
edition = "2021"
repository = "https://github.com/blakejakopovic/nostcat"
license-file = "LICENSE"
readme = "README.md"
keywords = ["nostr", "nostr-protocol", "websocket", "cli"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.0.26"
env_logger = "0.9.0"
log = "0.4.0"
tokio = { version = "1.22.0", features = ["macros", "rt-multi-thread", "sync"] }
tungstenite = {version = "0.18.0", features = ["native-tls"]}
url = "2.2.2"
serde = { version = "~1", features = ["derive"] }
serde_json = "~1"
